// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Latency with a basic license when data is loaded time comparison returns some data 1`] = `
Array [
  Object {
    "x": 1607436780000,
    "y": 36479,
  },
  Object {
    "x": 1607436840000,
    "y": 16383,
  },
  Object {
    "x": 1607436960000,
    "y": 35081.6666666667,
  },
  Object {
    "x": 1607437080000,
    "y": 31019,
  },
  Object {
    "x": 1607437140000,
    "y": 22271,
  },
  Object {
    "x": 1607437200000,
    "y": 21972.3333333333,
  },
  Object {
    "x": 1607437260000,
    "y": 21033.6666666667,
  },
  Object {
    "x": 1607437320000,
    "y": 22559,
  },
  Object {
    "x": 1607437440000,
    "y": 12704.4545454545,
  },
  Object {
    "x": 1607437560000,
    "y": 13687,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Latency with a basic license when data is loaded time comparison returns some data 2`] = `
Array [
  Object {
    "x": 1607436780000,
    "y": 24047,
  },
  Object {
    "x": 1607436840000,
    "y": 16895,
  },
  Object {
    "x": 1607436900000,
    "y": 21631,
  },
  Object {
    "x": 1607437020000,
    "y": 22980.3333333333,
  },
  Object {
    "x": 1607437140000,
    "y": 17145.6666666667,
  },
  Object {
    "x": 1607437200000,
    "y": 24383,
  },
  Object {
    "x": 1607437260000,
    "y": 24271,
  },
  Object {
    "x": 1607437380000,
    "y": 22711,
  },
  Object {
    "x": 1607437500000,
    "y": 32234.0769230769,
  },
  Object {
    "x": 1607437620000,
    "y": 63407,
  },
]
`;

exports[`APM API tests trial apm_8.0.0 Transaction latency with a trial license when data is loaded when not defined environments is seleted should return the correct anomaly boundaries 1`] = `
Array [
  Object {
    "x": 1607436000000,
    "y": 0,
    "y0": 0,
  },
  Object {
    "x": 1607436900000,
    "y": 0,
    "y0": 0,
  },
]
`;

exports[`APM API tests trial apm_8.0.0 Transaction latency with a trial license when data is loaded with environment selected should return a non-empty anomaly series 1`] = `
Array [
  Object {
    "x": 1607436000000,
    "y": 136610.507897203,
    "y0": 22581.5157631454,
  },
  Object {
    "x": 1607436900000,
    "y": 136610.507897203,
    "y0": 22581.5157631454,
  },
]
`;
